--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,6 +7,7 @@ build_task:
     timeout_in: 120m
     build_script:
         - bash build-all.sh -a $CIRRUS_TERMUX_ARCH
+        - ls -l debs
     env:
         matrix:
             CIRRUS_TERMUX_ARCH: aarch64
